tests/ui/issues/issue-1900.rs
fn main<T>() { }
//~^ ERROR `main` function is not allowed to have generic parameters
